# WTFcode

./: .gitignore  CLAUDE.md  README.md  RELEASE_NOTES.md  WTFcode.md  pyproject.toml
.claude/: settings.json
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: measure_tokens.py
src/wtfcode/: cli.py  graph_analyzer.py  llm.py  models.py  reporter.py  scanner.py
tests/: test_contracts.py
