[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wtfcode"
version = "0.1.0"
description = "Graph-first failure prediction for repos you didn't write"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "graphifyy>=0.3.0",
    "click>=8.0",
    "rich>=13.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai    = ["openai>=1.0.0"]
gemini    = ["google-genai>=0.8.0"]
dotenv    = ["python-dotenv>=1.0.0"]
all       = ["anthropic>=0.40.0", "openai>=1.0.0", "google-genai>=0.8.0", "python-dotenv>=1.0.0"]

[project.scripts]
wtfcode = "wtfcode.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
